Support searching for worlds that have the provided URL Slug
