# service/src/worlds/endpoints/search_worlds.rs
@@ -10,14 +10,19 @@ use rocket::{get, State};
 ///
 /// # Parameters
 /// - `worlds_service` - The worlds service to use
+/// - `owner` - The owner to filter against
+/// - `url_slug` - The URL Slug to filter against
+/// - `sort` - The sort ordering to apply
+/// - `pagination` - The pagination controls to apply
 ///
 /// # Returns
 /// The details of the worlds that matched the search
 #[tracing::instrument(name = "GET /worlds", skip(worlds_service))]
-#[get("/worlds?<owner>&<sort>&<pagination..>")]
+#[get("/worlds?<owner>&<url_slug>&<sort>&<pagination..>")]
 pub fn search_worlds(
     worlds_service: State<WorldsService>,
     owner: Option<UserLink>,
+    url_slug: Option<String>,
     sort: SortFieldsRequest<WorldSortField>,
     pagination: PaginationRequest,
 ) -> WorldsResponse {
@@ -26,6 +31,7 @@ pub fn search_worlds(
     let worlds = worlds_service.search_worlds(
         &WorldsFilters {
             owner: owner.map(|link| link.into()),
+            url_slug,
             ..Default::default()
         },
         &sort,
